apps/cliparr/service-cliparr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cliparr
  name: cliparr
spec:
  ports:
    - name: http
      port: 7171
      targetPort: 7171
  selector:
    app: cliparr
